# hotwheel-GT3

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.bat  start.command
.claude/: launch.json  settings.json
app/: config.py  db.py  enums.py  main.py  models.py  netutil.py
app/routers/: cars.py  insights.py  market.py  pages.py  races.py  seasons.py  standings.py  teams.py
app/services/: admin.py  budget.py  cars.py  grouping.py  insights.py  lineup.py  market.py  market_draft.py  market_snapshot.py  mmr.py  racestats.py  salary.py  scoring.py  search.py  seasons.py  standings.py  team_points.py  team_scoring.py  teams.py  tournament.py
app/static/: style.css
data/: hotwheel.db
scripts/: sim_selfcheck.py
tests/: conftest.py  test_admin_fixes.py  test_admin_wipe.py  test_budget.py  test_car_status.py  test_cars_routes.py  test_cars_service.py  test_cars_signing.py  test_enums_status.py  test_grouping.py  test_heat_validation.py  test_honors_integration.py  test_insights.py  test_launcher.py  test_lineup.py  test_market.py  test_market_draft.py  test_market_snapshot.py  test_migration.py  test_mmr.py  test_models.py  test_pages.py  test_races_routes.py  test_racestats.py  test_retired_no_race.py  test_salary.py  test_scoreboard.py  test_scoring.py  test_search_service.py  test_season_end.py  test_seasons_routes.py  test_seasons_service.py  test_selfcheck.py  test_standings.py  test_status_machine.py  test_team_championship.py  test_team_naming.py  test_team_points.py  test_teams_routes.py  test_teams_service.py  (+1 more)
(+33 files in other folders)
